--- a/ex010/style.css
+++ b/ex010/style.css
@@ -6,3 +6,60 @@
   font-size: large;
   
 }
+.calc{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+}
+.div_nome{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.div_teclas{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 220px;
+  flex-wrap: wrap;
+  border: 1px solid red;
+}
+.teclas{    display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #aaa;
+  border: 3px solid #888;
+  border-radius: 10px;
+  font-weight: bold;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  margin: 2px;
+}
+.teclasOp{
+  background-color: #f44 !important;
+  border-color: #800 !important;
+
+}
+
+/* DISPLAY */
+
+.div_display{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #f00;
+  width: 220px;
+}
+.display{
+  width: 220px;
+  background-color: #8a8;
+  text-align: right;
+  padding: 5px;
+  font-family: monospace;
+  font-size: large;
+
+}
