--- a/ex010/style.css
+++ b/ex010/style.css
@@ -11,12 +11,19 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  background-color: eee;
+  border: 3px solid #bbb;
+  width: 230px;
+  border-radius: 5px;
+  
 
 }
 .div_nome{
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 220px;
+
 }
 
 .div_teclas{
@@ -25,7 +32,7 @@
   align-items: center;
   width: 220px;
   flex-wrap: wrap;
-  border: 1px solid red;
+
 }
 .teclas{    display: flex;
   justify-content: center;
@@ -51,7 +58,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid #f00;
+
   width: 220px;
 }
 .display{
